Comprehensive SEO audit and improvements
- Add structured data (JSON-LD) for LocalBusiness and Person schemas
- Add OpenGraph and Twitter Card meta tags for social sharing
- Add hreflang tags for bilingual EN/HE support
- Add canonical URLs and geographic meta tags for local SEO
- Improve heading hierarchy (H1/H2) and add keyword-rich titles
- Add internal cross-linking between pages
- Add CTA sections to About and Services pages
- Add accessibility improvements (skip-link, ARIA labels, proper roles)
- Optimize images with alt text, dimensions, and lazy loading
- Update sitemap.xml with proper hreflang links
- Add Contact CTA button to header
- Add footer navigation links
- Improve home page with services grid and local SEO signals

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@ layout: none
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="refresh" content="0; url=/en/">
-  <title>Redirecting...</title>
+  <title>Lital Ben Or – Couple & Individual Therapist | North London</title>
+  <meta name="description" content="Certified Couple & Individual Therapist in North London (N12). Specialising in couples therapy, psychosexual therapy, and EMDR. Sessions in English and Hebrew.">
+  <link rel="canonical" href="https://litalbenor.github.io/en/">
+  <link rel="alternate" hreflang="en" href="https://litalbenor.github.io/en/">
+  <link rel="alternate" hreflang="he" href="https://litalbenor.github.io/he/">
+  <link rel="alternate" hreflang="x-default" href="https://litalbenor.github.io/en/">
 </head>
 <body>
   <p>Redirecting to <a href="/en/">English version</a>...</p>
 </body>
 </html>
-
